--- a/meson.build
+++ b/meson.build
@@ -50,6 +50,7 @@ endforeach
 
 # Now the cargo invocation
 cargo_env = {
+    'MESON_BUILD': '1',
     'CARGO_HOME': meson.project_build_root() / 'cargo-home',
     'CARGO_TARGET_DIR': meson.project_build_root(),
     'BPF_SOURCE_ROOT': meson.project_build_root(),
