CI: add a ruff format job
This is currently unused but we'll add a Python tool soon so let's get
this in place and reformat our currently only python file to match
ruff's expectations.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,15 @@ check-commit:
       junit: results.xml
 
 
+python formatting:
+  extends: .fdo.ci-fairy
+  stage: prep
+  script:
+    - python3 -m venv _venv
+    - . _venv/bin/activate
+    - pip3 install ruff
+    - ruff format --check .
+
 #
 # Build distribution-specific images used by the jobs in the build stage
 #
