Add udev-hid-bpf install
This installs the bpf.o and a corresponding udev rule. Unlike our
default setup this udev rule doesn't use the hwdb, it uses the KERNEL
property to match on. Usually udev rules are harder to maintain but in
this case the goal is to install a single udev rule for a single file,
so we're all good.

The lib/firmware path honors the given --prefix (if any, otherwise it
defaults to the compiled one). The udev rule is always placed in /etc/
because there are very few use-cases where that isn't the right place to
put it.

Closes #10

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -178,6 +178,11 @@ meson build and test:
     - tree $PREFIX
   variables:
     MESON_ARGS: --prefix=$PREFIX -Dudevdir=$PREFIX/lib/udev
+  artifacts:
+    paths:
+      - $MESON_BUILDDIR
+    when: on_success
+    expire_in: 1 day
 
 
 meson filter build:
@@ -251,6 +256,26 @@ meson features build:
 
 sast:
   stage: test
+
+cli install:
+  extends:
+    - .fedora-meson@template
+  dependencies:
+    - "meson build and test"
+  needs:
+    - "meson build and test"
+  parallel:
+    matrix:
+      - INSTPREFIX: $PREFIX
+      - INSTPREFIX: /foo
+        PREFIXARG: '--prefix=/foo'
+  script:
+    - cd $MESON_BUILDDIR
+    - ./udev-hid-bpf install --install-exe $PREFIXARG src/bpf/testing/HP_Elite_Presenter.bpf.o
+    - tree $INSTPREFIX
+    - test -e $INSTPREFIX/bin/udev-hid-bpf
+    - test -e /etc/udev-hid-bpf/HP_Elite_Presenter.bpf.o
+    - cat /etc/udev/rules.d/99-hid-bpf-HP_Elite_Presenter.rules
 
 #################################################################
 #                                                               #
