meson.build: hook up cargo test as meson test
The first test run will always take a while because cargo insists on
recompiling everything (even when previously build with --all-targets)
but it's better than having no test at all.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -84,6 +84,12 @@ cargo_build = custom_target(
   ]
 )
 
+test('cargo test',
+    cargo,
+    args: ['test'],
+    env: cargo_env
+)
+
 meson.add_devenv(cargo_env)
 
 udev_config = configuration_data()
