meson.build: build all targets if we're in debug mode
If we're not doing a release build, build all targets so we can detect
issues with the tests.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -35,6 +35,7 @@ if get_option('buildtype') == 'release'
   rust_target = 'release'
   message('Building in release mode')
 else
+  cargo_options += [ '--all-targets' ]
   rust_target = 'debug'
   message('Building in debug mode')
 endif
