--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 libbpf-rs = "0.22"
 libbpf-sys = "^1.1.0"
-udev =  { version = "^0.6.3", features = ["mio08"] }
+udev =  { version = "0.7.0", features = ["mio08"] }
 mio = { version = "0.8", features = ["os-ext"] }
 libc = "0.2"
 clap = { version = "~4.5.3", features = ["derive"] }
@@ -23,4 +23,4 @@ libbpf-cargo = { version = "0.22" }
 log = "0.4"
 bindgen = "0.69.4"
 regex = "1.9.1"
-udev =  { version = "^0.6.3", features = ["mio08"] }
+udev =  { version = "^0.7.0", features = ["mio08"] }
