meson.build: up the test timeout to 120 seconds
Cargo rebuilds everything on the first test run and that may take longer
than 30 seconds.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -97,7 +97,8 @@ cargo_build = custom_target(
 test('cargo test',
     cargo,
     args: ['test'],
-    env: cargo_env
+    env: cargo_env,
+    timeout: 120,
 )
 
 meson.add_devenv(cargo_env)
