--- a/meson.build
+++ b/meson.build
@@ -139,13 +139,20 @@ foreach build: builds
             ]
         )
 
+        # T, S, or U
+        suffix = build['suffix'].substring(0, 1).to_upper()
+        prefix = 'HID_BPF_@0@_'.format(suffix)
+
         custom_target(
             'hwdb files @0@'.format(build['suffix']),
             depends: json_data,
             build_by_default: true,
             output: '99-hid-bpf-@0@.hwdb'.format(build['suffix']),
             input: json_data,
-            command: [generate_hwdb_py],
+            command: [
+                generate_hwdb_py,
+                '--prefix', prefix,
+            ],
             feed: true,
             capture: true,
             install: true,
