Prefix all bpf.o files with a version number
This allows us to update the BPF programs in the future for newer
kernels but keep the existing ones around for older kernels.
The idea is that once the loader is updated, we will attempt to load
30-foo.bpf.o first, if that fails we'll try 20-foo.bpf.o and if that
succeeds ignore 10-foo.bpf.o (assuming that all three are assigned to a
device).

This patch is the file rename only.

Part of #15

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -1,10 +1,10 @@
 sources = [
-    'HP_Elite_Presenter.bpf.c',
-    'Kaliber-MMOmentum.bpf.c',
-    'Wacom-ArtPen.bpf.c',
-    'XBox_Elite_2.bpf.c',
-    'xppen-Artist24.bpf.c',
-    'xppen-ArtistPro16Gen2.bpf.c',
+    '10-HP_Elite_Presenter.bpf.c',
+    '10-Kaliber-MMOmentum.bpf.c',
+    '10-Wacom-ArtPen.bpf.c',
+    '10-XBox_Elite_2.bpf.c',
+    '10-xppen-Artist24.bpf.c',
+    '10-xppen-ArtistPro16Gen2.bpf.c',
 ]
 
 foreach bpf : sources
