meson: drop -Dbpfs=userhacks
userhacks should never be installed as a whole. Users should cherry-pick
which filter they want, depending on their preferences.

Disable the big hammer for installing userhacks as a whole, to prevent
users to go against their will.

Fixes #14

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -226,8 +226,7 @@ meson features build:
     matrix:
       - FEATURE: testing
       - FEATURE: stable
-      - FEATURE: userhacks
-      - FEATURE: testing,userhacks
+      - FEATURE: testing,stable
   script:
     - export MESON_EXTRA_ARGS="-Dbpfs=$FEATURE"
     - .gitlab-ci/meson-build.sh --run-install
@@ -237,11 +236,7 @@ meson features build:
         test -e $PREFIX/lib/firmware/hid/bpf/XBox_Elite_2.bpf.o
       fi
     - |
-      if [ "$FEATURE" = "userhacks" ]; then
-        test -e $PREFIX/lib/firmware/hid/bpf/trace_hid_events.bpf.o
-      fi
-    - |
-      if [ "$FILTER" = "testing,userhacks" ]; then
+      if [ "$FILTER" = "testing,stable" ]; then
         test -e $PREFIX/lib/firmware/hid/bpf/trace_hid_events.bpf.o
         test -e $PREFIX/lib/firmware/hid/bpf/XBox_Elite_2.bpf.o
       fi
