--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ regex = "1.9.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.113"
 
+[dev-dependencies]
+tempfile = "3.10.1"
+
 [build-dependencies]
 libbpf-rs = "0.22"
 libbpf-cargo = { version = "0.22" }
