--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+anyhow = "1.0.79"
 libbpf-rs = "0.22"
 libbpf-sys = "^1.1.0"
 udev =  { version = "0.7.0", features = ["mio08"] }
