Add Huion-Kamvas-Pro-19 BPF fixup
This tablets gets a lot of things wrong:
- the secondary button is reported through Secondary Tip Switch
- the third button is reported through Invert

Fortunately, before entering eraser mode, (so Invert = 1),
the tablet always sends an out-of-proximity event.
So we can detect that single event and:
- if there was none but the invert bit was toggled: this is the
  third button
- if there was this out-of-proximity event, we are entering
  eraser mode, and we will until the next out-of-proximity.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -1,6 +1,7 @@
 sources = [
     '10-FR-TEC-Raptor-Mach-2.bpf.c',
     '10-HP_Elite_Presenter.bpf.c',
+    '10-Huion-Kamvas-Pro-19.bpf.c',
     '10-Kaliber-MMOmentum.bpf.c',
     '10-Wacom-ArtPen.bpf.c',
     '10-XBox_Elite_2.bpf.c',
