CI: start the b2c tests in systemd
Taken from libinput, mainly.

This was supposed to work around some issues we saw with the udev tests
not working but it didn't fix it. Still, seems useful so let's leave
this here.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -351,7 +351,7 @@ b2c uhid-test:
   script:
     - *b2c-kernel-url
     - export B2C_KERNEL=$KERNEL_URL
-    - export B2C_COMMAND="test/uhid-test.sh --verbose test-$TEST-load"
+    - export B2C_COMMAND=".gitlab-ci/start-in-systemd.sh $TEST"
     - /app/boot2container
   artifacts:
     name: "meson-logs-$CI_JOB_NAME"
