meson: do not rebuild the tests
Looks like we have an issue with our target dir in test mode. It rebuilds
everything, because `cargo_options` has a different `--target-dir`.

Remove that extra `--target-dir` so we can run `meson test` without
recompilation.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -40,7 +40,6 @@ cargo = find_program('cargo', required: true)
 
 cargo_options = [
     '--manifest-path', meson.project_source_root() / 'Cargo.toml',
-    '--target-dir', meson.project_build_root() / 'src',
 ]
 
 if get_option('buildtype') == 'release'
@@ -105,7 +104,7 @@ cargo_build = custom_target(
     cargo, 'build',
     cargo_options,
     '&&',
-    'cp', 'src' / rust_target / meson.project_name(), '@OUTPUT@',
+    'cp', rust_target / meson.project_name(), '@OUTPUT@',
   ]
 )
 
