meson.build: require meson 1.0.0 or later
Some users have older meson versions which won't work.

Closes #22

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,6 @@
 project('udev-hid-bpf', 'rust',
-        version: '1.0.0-20240417') # Update Cargo.toml too!
+        version: '1.0.0-20240417', # Update Cargo.toml too!
+        meson_version: '>= 1.0.0')
 
 prefix = get_option('prefix')
 bindir = prefix / get_option('bindir')
