bpf: mark the current testing ones as stable
They are in
https://git.kernel.org/pub/scm/linux/kernel/git/hid/hid.git/log/?h=for-6.10/hid-bpf

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/src/bpf/stable/meson.build
+++ b/src/bpf/stable/meson.build
@@ -1,10 +1,18 @@
 sources = [
+    '10-FR-TEC__Raptor-Mach-2.bpf.c',
+    '10-HP__Elite-Presenter.bpf.c',
+    '10-Huion__Kamvas-Pro-19.bpf.c',
+    '10-IOGEAR__Kaliber-MMOmentum.bpf.c',
+    '10-Microsoft__XBox-Elite-2.bpf.c',
+    '10-Wacom__ArtPen.bpf.c',
+    '10-XPPen__Artist24.bpf.c',
+    '10-XPPen__ArtistPro16Gen2.bpf.c',
 ]
 
 foreach bpf : sources
     filter_matches = not have_filters
     if have_filters
-        foreach filter : filters
+        foreach filter: filters
             if bpf.contains(filter)
                 filter_matches = true
                 break
